// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReActor should query 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    Ready To call
  </span>
</div>
`;

exports[`createReActor should query 2`] = `
<div>
  <button
    onClick={[Function]}
  >
    Get Version
  </button>
  <span>
    0.2.0
  </span>
</div>
`;
